kube-2023-06-15/ingress.networking.k8s.io/awingconnect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/cookie-persistence: ingresscookie
    haproxy.org/forwarded-for: "true"
    haproxy.org/ssl-redirect: "false"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2023-06-09T08:10:43Z"
  generation: 2
  name: awingconnect-ingress
  namespace: default
  resourceVersion: "129001161"
  uid: 3ec394f1-25c2-424a-903a-98657b935638
spec:
  rules:
  - host: acm.awingconnect.vn
    http:
      paths:
      - backend:
          service:
            name: acmcaptive-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - acm.awingconnect.vn
    secretName: awingconnecttls
status:
  loadBalancer:
    ingress:
    - ip: 10.99.249.54
