kube-2023-06-15/ingress.networking.k8s.io/connect-v2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/cookie-persistence: ingresscookie
    haproxy.org/forwarded-for: "true"
    haproxy.org/ssl-redirect: "false"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-12-02T04:34:16Z"
  generation: 10
  name: connect-v2-ingress
  namespace: default
  resourceVersion: "121235481"
  uid: e520a75e-7e6a-4e86-b199-246e9926a9de
spec:
  rules:
  - host: connect-v2.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmcaptive-v2-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - connect-v2.awing.vn
    secretName: awingtls
status:
  loadBalancer:
    ingress:
    - ip: 10.99.249.54
